[package]
name = "graphtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
pollster = "0.3.0"
wasmtime = "43.0"
wasmtime-wasi = "43.0"
wasmtime-wasi-io = "43.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.89"
wasi-graphics-context-wasmtime = { path = "../wasi-gfx-runtime/crates/wasi-graphics-context-wasmtime" }
wasi-surface-wasmtime = { path = "../wasi-gfx-runtime/crates/wasi-surface-wasmtime", features = ["winit"] }
wasi-webgpu-wasmtime = { path = "../wasi-gfx-runtime/crates/wasi-webgpu-wasmtime" }
wasi-frame-buffer-wasmtime = { path = "../wasi-gfx-runtime/crates/wasi-frame-buffer-wasmtime" }
