[package]
name = "graphtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
pollster = "0.3.0"
wasmtime = "43.0"
wasmtime-wasi = "43.0"
wasmtime-wasi-io = "43.0"
tokio = { version = "1.40.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.89"
wasi-graphics-context-wasmtime = { git = "https://github.com/cdmurph32/wasi-gfx-runtime", rev = "4c74b8ab2cef007668acc18501b8fc1a57a66184" }
wasi-surface-wasmtime = { git = "https://github.com/cdmurph32/wasi-gfx-runtime", rev = "4c74b8ab2cef007668acc18501b8fc1a57a66184", features = ["winit"] }
wasi-webgpu-wasmtime = { git = "https://github.com/cdmurph32/wasi-gfx-runtime", rev = "4c74b8ab2cef007668acc18501b8fc1a57a66184" }
wasi-frame-buffer-wasmtime = { git = "https://github.com/cdmurph32/wasi-gfx-runtime", rev = "4c74b8ab2cef007668acc18501b8fc1a57a66184" }
